--- a/CCS_V3.1.PcbDoc.htm
+++ b/CCS_V3.1.PcbDoc.htm
@@ -126,17 +126,17 @@
             <tr class="front_matter">
             <td class="front_matter_column1">Date</td>
             <td class="front_matter_column2">:</td>
-            <td class="front_matter_column3">2016-07-18</td>
+            <td class="front_matter_column3">2016-07-28</td>
             </tr>
             <tr class="front_matter">
             <td class="front_matter_column1">Time</td>
             <td class="front_matter_column2">:</td>
-            <td class="front_matter_column3">8:54:28 PM</td>
+            <td class="front_matter_column3">8:37:15 PM</td>
             </tr>
             <tr class="front_matter">
             <td class="front_matter_column1">Filename</td>
             <td class="front_matter_column2">:</td>
-            <td class="front_matter_column3"><a href="file://C:\Users\logan\Documents\Altium\CCS\CCS_V3.1.PcbDoc" class="file"><acronym title="C:\Users\logan\Documents\Altium\CCS\CCS_V3.1.PcbDoc">C:\Users\logan\Documents\Altium\CCS\CCS_V3.1.PcbDoc</acronym></a></td>
+            <td class="front_matter_column3"><a href="file://C:\Users\logan\Documents\Altium\Hardware\CCS-Hardware\CCS_V3.1.PcbDoc" class="file"><acronym title="C:\Users\logan\Documents\Altium\Hardware\CCS-Hardware\CCS_V3.1.PcbDoc">C:\Users\logan\Documents\Altium\Hardware\CCS-Hardware\CCS_V3.1.PcbDoc</acronym></a></td>
             </tr>
         </table>
         
